# Sysopy

Zestaw-01/: README.md
Zestaw-01/zad1/: CMakeLists.txt
Zestaw-01/zad2/: CMakeLists.txt  clear.c  main.c  raport2.txt
Zestaw-01/zad3a/: CMakeLists.txt  clear.c  main.c  main_dynamic.c
Zestaw-01/zad3b/: CMakeLists.txt  clear.c  library.c  library.h  main.c  main_dynamic.c
Zestaw-02/: README.md
Zestaw-02/zad1/: CMakeLists.txt  clear.c  main.c
Zestaw-02/zad2/: CMakeLists.txt  clear.c  main.c  wyniki.txt
Zestaw-03/: README.md
Zestaw-03/zad1/: main.c
Zestaw-03/zad2/: CMakeLists.txt  main.c  txt.txt
Zestaw-03/zad3/: CMakeLists.txt  main.c  testMem.c  testTime.c  txt.txt
Zestaw-04/: README.md
Zestaw-04/zad1/: gettime.sh
Zestaw-04/zad1a/: main.c
Zestaw-04/zad1b/: CMakeLists.txt  main.c
Zestaw-04/zad2/: main.c
Zestaw-04/zad3/: CMakeLists.txt  main.c
Zestaw-05/: README.md
Zestaw-05/zad1/: CMakeLists.txt  main.c
Zestaw-05/zad2/: CMakeLists.txt  master.c  slave.c
Zestaw-06/: Readme.md
Zestaw-06/zad1/: CMakeLists.txt  client.c  common.h  server.c  txt.txt  xXxJebaczMatek2003xXx.h
Zestaw-06/zad2/: CMakeLists.txt  client.c  common.h  server.c  txt.txt
Zestaw-07/zad1/: CMakeLists.txt  barber.c  clients.c  common.h
Zestaw-07/zad2/: CMakeLists.txt  barber.c  clients.c  common.h
Zestaw-08/zad1/: CMakeLists.txt  README.md  Times.txt  clear.c  filter  gen_filter.c  gen_input.c  input  main.c  output
Zestaw-09/zad1/: CMakeLists.txt  main.c
Zestaw-09/zad2/: CMakeLists.txt  main.c
Zestaw-10/zad1/: CMakeLists.txt  client.c  common.h  server.c
Zestaw-10/zad2/: client.c  common.h  server.c
